Closed Bug 1290460 Opened 7 years ago Closed 7 years ago

../../../../../workspace/gecko/dom/media/webrtc/MediaEngineGonkVideoSource.h:67:21: error: 'BaseAllocationHandle' has not been declared

Categories

(Firefox OS Graveyard :: GonkIntegration, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox50 fixed)

RESOLVED FIXED
Tracking Status
firefox50 --- fixed

People

(Reporter: gerard-majax, Assigned: gerard-majax)

References

Details

Attachments

(1 file)

probably https://reviewboard.mozilla.org/r/64998/diff/4#5 from
Depends on: 1286096
Assignee: nobody → lissyx+mozillians
Attachment #8775980 - Flags: review?(padenot)
Attachment #8775980 - Flags: review+
Pushed by alissy@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d65a4acc9227
Update AllocationHandle for MediaEngineGonk r=padenot
https://hg.mozilla.org/mozilla-central/rev/d65a4acc9227
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.