Bug 1290460 - Update AllocationHandle for MediaEngineGonk r=padenot

MozReview-Commit-ID: KVVPjWfDSlu